--- a/src/app/moderator/all-required-courses/all-required-courses.component.html
+++ b/src/app/moderator/all-required-courses/all-required-courses.component.html
@@ -3,7 +3,7 @@
           <div class="container">
               <div class="row">
                   <h1 class="text-center">
-                      <i class="fa fa-user fa-2x" aria-hidden="true"></i> Courses
+                      <i class="fa fa-archive fa-2x" aria-hidden="true"></i> Required Courses
                   </h1>
               </div>
               <div class="col-md-10 offset-md-1 row-block">
