--- a/src/app/student/add-homework-to-course/add-homework-to-course.component.html
+++ b/src/app/student/add-homework-to-course/add-homework-to-course.component.html
@@ -10,7 +10,7 @@
 
               <div>
                   <div class="form-group">
-                      <label class="col-lg-3 control-label">Homework name</label>
+                      <label class="col-lg-3 control-label"></label>
                       <div class="col-lg-8">
                           <input required class="form-control"
                                  [(ngModel)]="homework.name" name="name"
